--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.5",
         "sensio/framework-extra-bundle": "^6.1",
+        "stripe/stripe-php": "^8.6",
         "symfony/asset": "5.4.*",
         "symfony/console": "*",
         "symfony/doctrine-messenger": "5.4.*",
